gitops/apps/rhcl-demo/appsets/mcp/resources/namespace-mcp-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mcp-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
