gitops/apps/rhcl-demo/appsets/mcp/resources/20-httproute-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuadrant-mcp
  namespace: mcp-system
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: ""
          kind: Service
          name: kuadrant-mcp-server
          port: 8080
          weight: 1
