gitops/apps/rhcl-demo/appsets/mcp/resources/httproute-rhcl-mcp-tools-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-mcp-tools-internal
  namespace: mcp-system
  annotations:
    argocd.argoproj.io/sync-wave: "32"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-mcp-gw
      namespace: openshift-ingress
      sectionName: http-mcp
  hostnames:
    - rhcl-mcp-tools.mcp.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rhcl-mcp-tools-bridge
          port: 8080
          weight: 1
